kubernetes/apps/home-assistant/app/deployment/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-httproute
  namespace: home-assistant
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: ingress
    sectionName: websecure
  hostnames:
  - "ha.cloud.fonzdm.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: home-assistant-server
      port: 8123

---
